--- a/integration/common.html
+++ b/integration/common.html
@@ -3507,6 +3507,13 @@ def reset_settings(client):
         # resetting this to an empty default value.
         if setting_name == &#34;storage-network&#34;:
             continue
+        # The test CI deploys Longhorn with the setting value longhorn-critical
+        # for the setting priority-class. Don&#39;t reset it to empty (which is
+        # the default value defined in longhorn-manager code) because this will
+        # restart Longhorn managed components and fail the test cases.
+        # https://github.com/longhorn/longhorn/issues/7413#issuecomment-1881707958
+        if setting.name == SETTING_PRIORITY_CLASS:
+            continue
 
         # The version of the support bundle kit will be specified by a command
         # option when starting the manager. And setting requires a value.
@@ -3759,7 +3766,7 @@ def find_backup(client, vol_name, snap_name):
     def find_backup_volume():
         bvs = client.list_backupVolume()
         for bv in bvs:
-            if bv.name == vol_name:
+            if bv.name == vol_name and bv.created != &#34;&#34;:
                 return bv
         return None
 
@@ -8886,7 +8893,7 @@ been completed successfully</p></div>
     def find_backup_volume():
         bvs = client.list_backupVolume()
         for bv in bvs:
-            if bv.name == vol_name:
+            if bv.name == vol_name and bv.created != &#34;&#34;:
                 return bv
         return None
 
@@ -11223,6 +11230,13 @@ def random_labels():
         # default value. We need to skip here to avoid test failure when
         # resetting this to an empty default value.
         if setting_name == &#34;storage-network&#34;:
+            continue
+        # The test CI deploys Longhorn with the setting value longhorn-critical
+        # for the setting priority-class. Don&#39;t reset it to empty (which is
+        # the default value defined in longhorn-manager code) because this will
+        # restart Longhorn managed components and fail the test cases.
+        # https://github.com/longhorn/longhorn/issues/7413#issuecomment-1881707958
+        if setting.name == SETTING_PRIORITY_CLASS:
             continue
 
         # The version of the support bundle kit will be specified by a command
