--- a/manual/release-specific/v1.6.0/test-engine-version-enforcement/index.html
+++ b/manual/release-specific/v1.6.0/test-engine-version-enforcement/index.html
@@ -785,7 +785,8 @@
   <div>
     <article id="content">
        <h2 id="related-issue">Related issue</h2>
-<p><a href="https://github.com/longhorn/longhorn/issues/5842">https://github.com/longhorn/longhorn/issues/5842</a></p>
+<p><a href="https://github.com/longhorn/longhorn/issues/5842">https://github.com/longhorn/longhorn/issues/5842</a>
+<a href="https://github.com/longhorn/longhorn/issues/7539">https://github.com/longhorn/longhorn/issues/7539</a></p>
 <h2 id="test-step">Test step</h2>
 <p><strong>Given</strong> Longhorn v1.4.x cluster running<br>
 And create and attach a volume (volume-1)<br>
@@ -803,11 +804,11 @@ longhorn-manager-grhsf                                0/1     CrashLoopBackOff  
 <p><strong>When</strong> upgraded v1.4.1 volume (volume-1) engine<br>
 And upgraded Longhorn to v1.6.0
 <strong>Then</strong> Longhorn components should be running<br>
-And v1.4.x EngineImage state should be incompatible</p>
-<pre tabindex="0"><code>NAME          STATE          IMAGE                               REFCOUNT   BUILDDATE   AGE
-ei-74783864   deployed       longhornio/longhorn-engine:v1.5.1   10         28d         12m
-ei-7fa7c208   incompatible   longhornio/longhorn-engine:v1.4.1   0          157d        13m
-ei-ad420081   deployed       c3y1huang/research:2017-lh-ei       0          44h         24s
+And v1.4.x EngineImage state should be deployed and incompatible should be true.</p>
+<pre tabindex="0"><code>NAME          INCOMPATIBLE   STATE      IMAGE                               REFCOUNT   BUILDDATE   AGE
+ei-74783864   false          deployed   longhornio/longhorn-engine:v1.5.1   10         28d         12m
+ei-7fa7c208   true           deployed   longhornio/longhorn-engine:v1.4.1   0          157d        13m
+ei-ad420081   false          deployed   c3y1huang/research:2017-lh-ei       0          44h         24s
 </code></pre><p><strong>When</strong> update existing volume/engine/replica custom resourcs <code>spec.image</code> with <code>longhornio/longhorn-engine:v1.4.x</code><br>
 <strong>Then</strong> should be blocked</p>
 
