Update testing docs
Signed-off-by: c3y1huang <c3y1huang@users.noreply.github.com>

--- a/integration/common.html
+++ b/integration/common.html
@@ -240,6 +240,10 @@ SETTING_BACKUP_COMPRESSION_METHOD = &#34;backup-compression-method&#34;
 SETTING_BACKUP_CONCURRENT_LIMIT = &#34;backup-concurrent-limit&#34;
 SETTING_RESTORE_CONCURRENT_LIMIT = &#34;restore-concurrent-limit&#34;
 SETTING_V1_DATA_ENGINE = &#34;v1-data-engine&#34;
+SETTING_ALLOW_EMPTY_NODE_SELECTOR_VOLUME = \
+    &#34;allow-empty-node-selector-volume&#34;
+SETTING_REPLICA_DISK_SOFT_ANTI_AFFINITY = &#34;replica-disk-soft-anti-affinity&#34;
+SETTING_ALLOW_EMPTY_DISK_SELECTOR_VOLUME = &#34;allow-empty-disk-selector-volume&#34;
 
 DEFAULT_BACKUP_COMPRESSION_METHOD = &#34;lz4&#34;
 BACKUP_COMPRESSION_METHOD_LZ4 = &#34;lz4&#34;
