Update testing docs
Signed-off-by: c3y1huang <c3y1huang@users.noreply.github.com>

--- a/manual/pre-release/node-not-ready/node-restart/physical-node-reboot/index.html
+++ b/manual/pre-release/node-not-ready/node-restart/physical-node-reboot/index.html
@@ -827,7 +827,8 @@
   <div>
     <article id="content">
        <ol>
-<li>Reboot the node that the controller (StatefulSet/Deployment) attached to. After reboot complete, the volume should be reattached to the node.</li>
+<li>Create StatefulSet/Deployment with 3 a replicas volume.</li>
+<li>Reboot the volume node that the controller (StatefulSet/Deployment) attached to. After the reboot is complete, the volume should be healthy and the data should be correct.</li>
 </ol>
 
     </article>
